[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "User-friendly command-line HTTP tool."
documentation = "https://github.com/saghm/rural"
homepage = "https://github.com/saghm/rural"
keywords = ["http", "curl", "httpie"]
license = "MIT"
name = "rural"
readme = "README.md"
repository = "https://github.com/saghm/rural"
version = "0.7.3"

[dependencies]
clap = "2.30.0"
colored = "1.6.0"
json-color = "0.6.2"
lazy_static = "0.2.11"
regex = "0.2.6"
reqwest = "0.8.5"
serde_json = "1.0.9"
