[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "User-friendly command-line HTTP tool."
documentation = "https://github.com/saghm/rural"
homepage = "https://github.com/saghm/rural"
keywords = ["http", "curl", "httpie"]
license = "MIT"
name = "rural"
readme = "README.md"
repository = "https://github.com/saghm/rural"
version = "0.8.0"

[dependencies]
clap = "2.32.0"
colored = "1.6.1"
json-color = "0.6.2"
lazy_static = "1.1.0"
regex = "1.0.5"
reqwest = "0.9.2"
serde_json = "1.0.32"
