[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "User-friendly command-line HTTP tool."
documentation = "https://github.com/saghm/rural"
edition = "2018"
homepage = "https://github.com/saghm/rural"
keywords = ["http", "curl", "httpie"]
license = "MIT"
name = "rural"
readme = "README.md"
repository = "https://github.com/saghm/rural"
version = "0.8.1"

[dependencies]
clap = "2.32.0"
colored = "1.7.0"
json-color = "0.7.1"
lazy_static = "1.2.0"
regex = "1.1.0"
reqwest = "0.9.9"
serde_json = "1.0.38"
atty = "0.2"
